<resources>
    <string name="app_name">PillaBikeAPP</string>
    <string name="parking">Parking</string>
    <string name="bikes">Bikes</string>
    <string name="modify">Modify:</string>
    <string name="delete">Delete:</string>
    <string name="addbikeinparking">Add Bike in Parking:</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="open">Open:</string>
    <string name="close">Close:</string>
    <string name="full">Full:</string>
    <string name="details">Details:</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="remove_parking">Remove Parking</string>
    <string name="yes">Yes</string>
    <string name="not">Not</string>
    <string name="buydate">Buy Date:</string>
    <string name="electric">Electric:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="parking_not_found">Parking not found</string>
</resources>