<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_parking_name_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <TextView
                android:id="@+id/tv_parking_city_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewOpen"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/open" />

            <TextView
                android:id="@+id/tv_parking_open_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textClose"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <TextView
                android:id="@+id/tv_parking_close_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFull"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/full" />

            <CheckBox
                android:id="@+id/tv_parking_full_item"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_parking_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/details"
            android:textSize="12sp"
            android:textColor="#F4D504"
            app:iconTint="#F4D504"
            app:icon="?android:attr/actionModeFindDrawable" />

        <Button
            android:id="@+id/delete_parking_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/delete"
            android:textColor="#F4D504"
            android:textSize="12sp"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconPadding="12dp"
            app:iconTint="#F4D504" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/bikeAdd_parking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/addbikeinparking"
            android:textColor="#F4D504"
            app:icon="@drawable/ic_baseline_local_parking_24"
            app:iconTint="#F4D504" />

    </LinearLayout>

</LinearLayout>