<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewbuyDate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buydate" />

            <TextView
                android:id="@+id/tv_bike_buyDate_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tv_bike_description_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tv_parking_close_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewElectric"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/electric" />

            <CheckBox
                android:id="@+id/tv_bike_electric_item"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewParking"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/parking" />

            <TextView
                android:id="@+id/tv_bike_parking_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_bike_button"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/details"
            android:textSize="12sp"
            android:textColor="#F4D504"
            app:iconTint="#F4D504"
            app:icon="?android:attr/actionModeFindDrawable" />

        <Button
            android:id="@+id/delete_bike_button"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/delete"
            android:textColor="#F4D504"
            android:textSize="12sp"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconPadding="12dp"
            app:iconTint="#F4D504" />

    </LinearLayout>



</LinearLayout>